[package]
edition = "2021"
name = "gufo_ping"
version = "0.3.1"

# See more keys and their definitions 
# at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "gufo_ping"

[dependencies]
byteorder = "1.5"
coarsetime = "0.1"
internet-checksum = "0.2"
pyo3 = {version = "0.20", features = ["extension-module"]}
rand = "0.8"
socket2 = {version = "0.5", features = ["all"]}

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
strip = "debuginfo"
