[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2", "wheel", "setuptools-rust"]

[tool.black]
line-length = 79
target-version = ['py39']

[tool.coverage.run]
omit = ["*tests*", "*examples*"]

[tool.coverage.html]
directory = "dist/coverage"

[tool.cibuildwheel]
before-test = "pip install -e {project}[test]"
test-command = "cd {project} && pytest -v tests/"

[tool.cibuildwheel.linux]
before-all = "./tools/build/setup-rust.sh && pip install -e .[build]"
manylinux-aarch64-image = "manylinux2014"
# manylinux-i686-image = "manylinux_2_24"
# manylinux-ppc64le-image = "manylinux_2_24"
# manylinux-pypy_aarch64-image = "manylinux_2_24"
# manylinux-pypy_i686-image = "manylinux_2_24"
# manylinux-pypy_x86_64-image = "manylinux_2_24"
# manylinux-s390x-image = "manylinux_2_24"
manylinux-x86_64-image = "manylinux2014"
musllinux-aarch64-image = "musllinux_1_1"
# musllinux-i686-image = "musllinux_1_1"
# musllinux-ppc64le-image = "musllinux_1_1"
# musllinux-s390x-image = "musllinux_1_1"
musllinux-x86_64-image = "musllinux_1_1"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".git", "build", "dist"]
line-length = 79
# Assume Python 3.9
target-version = "py39"
# Always autofix, but never try to fix `F401` (unused imports).
fix = true

[tool.ruff.lint]
ignore = ["D203", "D212", "D107", "PLR0913", "S311", "PLR0912"]
# Enable
select = [
  "E", # Pycodestyle Error
  "F", # Pyflakes
  "W", # Pycodestyle Warning
  "C90", # mccabe
  "I", # isort
  "D", # Pydocstyle
  "YTT", # flake8-2020
  "ANN", # flake8-annotations
  "S", # flake8-bandit
  "BLE", # flake8-blind-except
  "B", # flake8-bugbear
  "A", # flake8-builtins
  "C4", # flake8-comprehensions 
  "EM", # flake8-errmsg
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "PLC", # pylint
  "PLE", # pylint
  "PLR", # pylint
  "PLW", # pylint
  "PIE", # flake8-pie
  "RUF", # ruff specific
]
unfixable = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402"]
"examples/*.py" = [
  "D100", # Missing docstring in public module
  "D103", # Missing docstring in public function
  "RUF006", # Store a reference to the return value of `asyncio.create_task`
]
"tests/*.py" = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "S101", # Use of assert detected
  "PT011", # {exc} is too broad, set the `match` parameter or use a more specific exception
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
  "PLW0603", # Using the global statement to update `{var}` is discouraged
]

[project]
authors = [{name = "Gufo Labs"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Networking",
  "Topic :: System :: Networking :: Monitoring",
  "Operating System :: POSIX :: Linux",
  "Typing :: Typed",
]
description = "Gufo Ping is the accelerated Python asyncio IPv4/IPv6 ping implementation"
dynamic = ["version"]
keywords = ["error"]
license = "BSD-3-Clause"
name = "gufo_ping"
requires-python = ">=3.9"

[project.optional-dependencies]
build = [
  "setuptools-rust==1.5.2",
]
docs = [
  "mkdocs-gen-files==0.5.0",
  "mkdocs-literate-nav==0.6.2",
  "mkdocs-material==9.6.11",
  "mkdocs-section-index==0.3.10",
  "mkdocstrings[python]==0.29.1",
]
ipython = [
  "ipython==9.6.0",
]
lint = [
  "mypy==1.18.2",
  "ruff==0.14.0",
  "types-PyYAML==6.0.12.3",
]
test = [
  "PyYAML>=6.0",
  "pytest-benchmark==5.1.0",
  "pytest-cov==7.0.0",
  "pytest==8.4.2",
]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
"Bug Tracker" = "https://github.com/gufolabs/gufo_ping/issues"
Changelog = "https://github.com/gufolabs/gufo_ping/blob/master/CHANGELOG.md"
Documentation = "https://docs.gufolabs.com/gufo_ping/"
Homepage = "https://github.com/gufolabs/gufo_ping/"
"Source Code" = "https://github.com/gufolabs/gufo_ping/"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "gufo.ping.__version__"}

[tool.mypy]
explicit_package_bases = true
mypy_path = ["src"]
strict = true
warn_unused_ignores = false
