[metadata]
name = gufo_ping
version = 0.1.0
author = Gufo Labs
url = https://github.com/gufolabs/gufo_ping/
long_description = file:README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
keywords = error
classifiers =
    Programming Language :: Rust
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring
    Operating System :: POSIX :: Linux
    Typing :: Typed
project_urls =
    Documentation = https://docs.gufolabs.com/gufo_ping/
    Source Code = https://github.com/gufolabs/gufo_ping/
    Bug Tracker = https://github.com/gufolabs/gufo_ping/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[flake8]
ignore = E203,W503